--- a/botconfig.json
+++ b/botconfig.json
@@ -1,4 +1,4 @@
 {
-"token": "NzI4MzEwNzkxNjQ4MDUxMjUy.Xwsl5Q.-VNfKSTwmfmUV86GeD3YxqVqWUg",
+"token": "NzI4MzEwNzkxNjQ4MDUxMjUy.Xw9t7Q.O8lcq1jS7iNsKQnPcHroQypK5c0",
 "prefix": "antti "
 }
