--- a/botconfig.json
+++ b/botconfig.json
@@ -1,4 +1,4 @@
 {
-"token": "NzEyMDA3NzQ0NjY3OTEwMjU2.XsLS4g.uP_T-MbyZ0eDpiVjYVGaELiBoGo",
+"token": "NzI4MzEwNzkxNjQ4MDUxMjUy.Xv4iSA._Iv7LAoWcYoDl3wiL_K4GlPizN8",
 "prefix": "antti "
 }
